# backend/docs/swagger.json
@@ -176,9 +176,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/users/": {
+            },
             "post": {
                 "description": "Принимает данные нового пользователя, привязывает к существующему админу и возвращает созданный объект",
                 "consumes": [
@@ -228,6 +226,48 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Удаляет пользователя из системы по его уникальному ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Удаление пользователя",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID пользователя для удаления",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Пользователь успешно удален",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "ID не указан или пользователь не найден",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/users/login": {
@@ -264,19 +304,13 @@
                     "400": {
                         "description": "Неверный формат JSON или пользователь не найден",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     },
                     "500": {
                         "description": "Внутренняя ошибка сервера",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     }
                 }
